Move to comsunsource #1: some definitions