@@ -1,18 +1,10 @@
-/*
- * This file was generated by the Gradle 'init' task.
- */
-
 plugins {
     id 'java'
-    id 'maven-publish'
     id 'application'
 }
 
-application {
-    mainClassName = 'lsifjava.Main'
-}
-
 repositories {
+    jcenter()
     mavenLocal()
     maven {
         url = 'https://repo.maven.apache.org/maven2'
@@ -20,27 +12,44 @@ repositories {
 }
 
 dependencies {
-    compile 'com.github.javaparser:javaparser-symbol-solver-core:3.16.1'
-    compile 'fr.inria.gforge.spoon:spoon-core:8.3.0-beta-8'
+    compile files("${System.getProperty('java.home')}/../lib/tools.jar")
     compile 'com.google.code.gson:gson:2.8.6'
     compile 'commons-cli:commons-cli:1.4'
+    compile 'org.apache.commons:commons-lang3:3.11'
+    compile 'commons-io:commons-io:2.8.0'
+    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
     compile 'org.slf4j:slf4j-api:1.7.30'
     compile 'org.slf4j:slf4j-nop:1.7.30'
+    implementation 'org.eclipse.lsp4j:org.eclipse.lsp4j:0.9.0'
+    implementation 'com.google.guava:guava:29.0-jre'
+    testImplementation 'junit:junit:4.13'
+}
+
+application {
+    mainClassName = 'lsifjava.Main'
+}
+
+compileJava {
+    options.compilerArgs += ["--enable-preview"]
+    options.compilerArgs += [
+        "--add-exports",
+        "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+        "--add-exports",
+        "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+        "--add-exports",
+        "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+        "--add-exports",
+        "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+        "--add-exports",
+        "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+        "--add-exports",
+        "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+        "--add-exports",
+        "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+        "--add-exports",
+        "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+    ]
 }
 
 group = 'com.sourcegraph'
 version = '1.0-SNAPSHOT'
-sourceCompatibility = '1.8'
-
-publishing {
-    model {
-        tasks.generatePomFileForSourcegraphPublication {
-            destination = file("$projectDir/pom.xml")
-        }
-    }
-    publications {
-        sourcegraph(MavenPublication) {
-            from components.java
-        }
-    }
-}
